kustomize/security/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: robotshop
spec:
  hosts:
  - "*"
  gateways:
  - robotshop-gateway

  http:

  - match:
      - uri:
          prefix: /product
    route:
      - destination:
          host: catalogue
          port:
            number: 8080

  - match:
      - uri:
          prefix: /
    route:
      - destination:
          host: web-service
          port:
            number: 8080
